[gd_scene load_steps=7 format=2]

[ext_resource path="res://sheep.svg" type="Texture" id=1]
[ext_resource path="res://sheep.gd" type="Script" id=2]
[ext_resource path="res://sounds/player_laser_a.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/player_laser_b.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/player_impact.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.7458, 27.956 )

[node name="Sheep" type="KinematicBody2D" groups=[
"sheep",
]]
script = ExtResource( 2 )

[node name="sheep" type="Sprite" parent="."]
position = Vector2( -1.31287, -1.37996 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.99662 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = -29.0
margin_right = 6.0
margin_bottom = -27.0
color = Color( 2, 2, 2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -11.8377
margin_top = -6.64143
margin_right = 2.16234
margin_bottom = -4.64143
rect_rotation = 90.0
color = Color( 4, 4, 4, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 10.8546
margin_top = -7.14199
margin_right = 24.8546
margin_bottom = -5.14199
rect_rotation = 90.0
color = Color( 4, 4, 4, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightProjectileSpawn" type="Position2D" parent="."]
position = Vector2( 19, -30 )

[node name="LeftProjectileSpawn" type="Position2D" parent="."]
position = Vector2( -19, -30 )

[node name="MiddleSpawnPosition" type="Position2D" parent="."]
position = Vector2( 0, -30 )

[node name="LaserPlayer0" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="LaserPlayer1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="ImpactPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
bus = "SFX"
